<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cartwheels</string>

    <!-- Urls-->
    <string name="scheme">https</string>
    <string name="authority">cartwheels.us</string>
    
    <!-- Login/Register -->
    <string name="user_email">Email Address</string>
    <string name="user_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="registerUser">Register as User</string>
    <string name="registerOwner">Register as Owner</string>
    <string name="permit_number">Permit Number</string>
    <string name="action_logout">Logout</string>

    <!-- Search Values -->
    <string name="cart_image_description">Cart Picture</string>
    <string name="cart_name">Cart Name</string>
    <string name="zipcode">Zipcode</string>
    <string name="upload_id">Upload Id</string>
    <string name="text_query">e.g halal</string>

    <!-- Navigation Drawer values -->
    <string name="title_section1">Home</string>
    <string name="title_section2">Search</string>
    <string name="title_section3">Notifications</string>
    <string name="title_section4">Me</string>
    <string name="title_section5">My Cart</string>
    <string name="title_section6">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="cart_owner">Cart Owner</string>
    <string name="title_activity_place_holder">PlaceHolderActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- Search -->
    <string name="search_hint">e.g Halal</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_view_cart">View Cart</string>

    <!-- ViewCart -->
    <string name="tab_section1">Cart</string>
    <string name="tab_section2">Reviews</string>
    <string name="tab_section3">Photos</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>

</resources>
