<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cartwheels.RegisterActivity$PlaceholderFragment" >
    
    <ImageView 
        android:id="@+id/defaultProfilePicture"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:onClick="takePicture"
        android:src="@drawable/default_profile_picture"/>
    
    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_below="@id/defaultProfilePicture"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/first_name" >       
        <requestFocus/>
    </EditText>
    
    <EditText 
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_below="@id/firstName"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/last_name" />
        
    <EditText
        android:id="@id/userEmail"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lastName"
        android:ems="10"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress" />

     <EditText
	        android:id="@id/userPassword"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_margin="5dp"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/userEmail"
	        android:ems="10"
	        android:hint="@string/user_password"
	        android:inputType="textPassword" />
     
     <EditText 
         android:id="@id/userPasswordConfirmation"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="5dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/userPassword"
         android:ems="10"
         android:hint="Password confirmation"
         android:inputType="textPassword"/>
     
     
     <Button
	        android:id="@+id/registerOwnerButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/userPasswordConfirmation"
            android:onClick="register"
            android:text="@string/register" />
</RelativeLayout>
